<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/invoice_background"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:titleTextColor="@color/white"
        android:textAlignment="center"
        android:title="@string/title"
        style="@style/TextAppearance.AppCompat.Large"
        tools:targetApi="m" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/description"
        android:textColorHint="@color/teal_700"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/teal_700"
        android:hint="@string/brand"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/teal_700"
        android:hint="@string/origin"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/hs_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/teal_700"
        android:hint="@string/hs_code"
        android:textColor="@color/white" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Item"
        android:textColorHint="@color/teal_700"
        android:textColor="@color/white" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/teal_700"
        android:hint="@string/qty"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/unit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/unit_price"
        android:textColorHint="@color/teal_700"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/save"
        android:textColor="@color/black" />

</LinearLayout>