<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/invoice_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <Toolbar
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/invoice_background"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:textAllCaps="false"
                android:textColor="#55CFE4"
                android:backgroundTint="@color/invoice_background"
                android:text="@string/cancel"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/invoice_background"
                android:text="@string/add_client"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#55CFE4"
                android:backgroundTint="@color/invoice_background"
                android:text="@string/save"
                android:textAllCaps="false" />
        </Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/client_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/client_name"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/address"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Country"
        android:hint="@string/country"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/street"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/apt_suit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/apt_suit"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/post_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="postalCode"
        android:hint="@string/postal_code"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/city"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/province_state"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

</LinearLayout>