<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context="com.example.bookkeeper.presentation.view.FragmentDetail">

    <Toolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/primary_color"
            android:text="@string/back_button"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/invoice_background"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/invoice_detail"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@color/primary_color"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </Toolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/invoice_number_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/invoice_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/invoice_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/invoice_number_static"
        android:hint="@string/naj_003"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_color_variant" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/issue_date_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/invoice_number"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/issue_date"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/issue_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invoice_number"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/invoice_number_static"
        android:hint="@string/o9_4_2022"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_color_variant"
        android:textSize="20sp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_date"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/discount"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <RadioButton
        android:id="@+id/dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_date"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"

        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/discount"
        android:background="@color/primary_color"
        android:checked="true"
        android:clickable="true"

        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:shadowRadius="@integer/material_motion_duration_short_1"
        android:text="@string/dollar"
        android:textColor="@color/white" />

    <RadioButton
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_date"
        android:layout_marginStart="1dp"
        android:layout_marginTop="35dp"

        android:layout_toEndOf="@id/dollar"
        android:background="@color/primary_color"
        android:clickable="true"

        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:shadowRadius="@integer/material_motion_duration_short_1"
        android:text="@string/percent"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/discount_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue_date"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/percent"

        android:hint="@string/_0_00"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_color_variant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reference_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/discount_amount"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/reference_no"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reference_number_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/discount_amount"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/reference_number"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_000000001"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>